--- a/learning.org
+++ b/learning.org
@@ -1,6 +1,12 @@
 Everything I learn is here.
 
 * Doctorate courses
+** First Year Semester 1:
+   Computer Vision
+   Planning and Decision Making for Autonomous Robots
+   Computational Structural Design 1
+   Coding Architecture 1
+   Design Integrated Life Cycle Assessment
 ** DONE Course about Foo
    <2016-10-14 Fri 10:00>--<2016-10-14 Fri 12:00>
    3 credits
