--- a/writings.org
+++ b/writings.org
@@ -2,3 +2,6 @@ Everything I write but papers.
 
 * Blog drafts
 ** TODO Blog on the relations between foo and bar
+\begin{equation}
+y = f(x)
+\end{equation}
